<!--
 Copyright 2019 Google LLC

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->

<resources>
    <string name="app_name">Glass Design 2</string>
    <string name="empty_string" />
    <string name="thin_font">sans-serif-thin</string>
    <string name="footnote_sample">This is the footnote</string>
    <string name="timestamp_sample">just now</string>
    <string name="columns_sample">You can put the centered image inside of the COLUMNS layout.</string>
    <string name="text_sample">This is the TEXT layout. The text size is up to you.</string>
    <string name="different_options">You can also add menu with different options for each fragment.</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="like_this_sample">Do you like this sample?\n\nSource code is available at:\ng.co/glass/samples</string>
    <string name="menu_font">sans-serif-thin</string>
    <string name="menu_item">Menu item</string>

    <string name="manual">Manual</string>
    <string name="maintenance">Maintenance</string>
    <string name="monitor">Monitor</string>
    <string name="video_call">Video Call</string>
    <string name="lyo_manual">LYO Manual</string>
    <string name="camera">Camera</string>
    <string name="help">Help</string>

    <string name="step_1">STEP 1</string>
    <string name="step_2">STEP 2</string>
    <string name="step_3">STEP 3</string>
    <string name="step_4">STEP 4</string>

    <string name="step_1_desc">Select Recipe</string>
    <string name="step_2_desc">Load Recipe</string>
    <string name="step_3_desc">Save Recipe</string>
    <string name="step_4_desc">Start Recipe</string>
    <string name="webrtc">Make WebRTC Call</string>
    <string name="agora">Agora Call</string>

    <string name="type_normal">Normal</string>
    <string name="type_info">Info</string>
    <string name="type_critical">Critical</string>
    <string name="type_cam">Camera</string>

    <string name="space_id">h7copa94aofe</string>
    <string name="access_token">ds7P8ue7X0PmwaS-pSYAIZqbCZ1ZhrwO4iASYCmsTJY</string>
    <string name="upload">Upload</string>

    <string name="text_error">Complete this step to move forward</string>

    <string name="tap">Tap</string>
    <string name="double_tap">Two finger tap</string>
    <string name="swipe_f">swipe forward</string>
    <string name="swipe_b">swipe backward</string>
    <string name="swipe_d">swipe down</string>

    <string name="tap_count">Tap Count</string>

    <string name="batch_manual">Batch Manual</string>
    <string name="defrost_manual">Defrost Manual</string>
    <string name="report">Report</string>

    <string name="filter_batch">batch</string>
    <string name="filter_defrost">defrost</string>
    <string name="upload_tip">Tap to upload Image</string>
    <string name="play_video">Help Video</string>
    <string name="qr_scanner">Scan Manual QR</string>
    <string name="error_string">Something went wrong</string>

    <!-- AR CORE-->

    <string name="private_broadcasting_app_id">dcba09a2e4a44d00a52c7157499a85b9</string>
    <string name="agora_access_token">006dcba09a2e4a44d00a52c7157499a85b9IACoRxyc7FmoRgIXHmK/uPjQC1/tSYpP4atT18k6V/1+AfVzp/YAAAAAEAAH/YcheWwSYAEAAQB8bBJg</string>

    <string name="ar_mode">AR mode</string>
    <string name="agora_mode">Agora mode</string>
    <string name="show_point">Show point cloud</string>
    <string name="hide_point">Hide point cloud</string>
    <string name="show_plane">Show plane</string>
    <string name="hide_plane">Hide plane</string>
    <string name="jobs">Jobs</string>
    <string name="design_qualification">Design Q</string>
    <string name="operational_qualification">Operational Q</string>
    <string name="installation_qualification">Installation Q</string>
    <string name="skill_test">Skill Test</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="have_an_issue">Have an Issue?</string>
    <string name="tap_to_select_a_module_to_check">Tap to select a Module to Check</string>
    <string name="scan_manual_qr">Scan Manual QR</string>

    <!-- Contentful management Token -->

    <string name="cma_token">CFPAT-vRfJufUStLrF8r17z76CRT3j8ydNADJQmNnFshCIuCw</string>
    <string name="live_tracking">Live Tracking</string>
    <string name="change_theme">Change Theme Color</string>

    <string name="rationale_video_app">This app needs access to your camera and mic so you can perform video calls</string>
    <string name="rationale_ask_again">This app may not work correctly without the requested permissions. Open the app settings screen to modify app permissions.</string>
    <string name="title_settings_dialog">Permissions Required</string>
    <string name="setting">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="buttonText">Click to begin please</string>
    <string name="video">Video</string>
    <string name="audio">Audio</string>


    <!--Voice Recognition  -->
    <string name="main_voice_commands">Manual, Job, Design, Monitor, Machine</string>
    <string name="alternative_voice_commands">Add, Delete, Copy</string>
    <string name="swipe_forward_to_disable_voice_commands">Swipe forward to disable voice commands</string>
    <string name="swipe_forward_to_enable_voice_commands">Swipe forward to enable voice commands</string>
    <string name="tap_to_start_appcompatactivity">Tap to start AppCompatActivity</string>
    <string name="swipe_forward_to_reload_commands">Swipe forward to reload commands</string>
    <string name="disabled">Disabled</string>
    <string name="copy">Copy</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="voice_commands">Voice commands:</string>
    <string name="no_data">No data</string>
    <string name="edit_reports">Edit Reports</string>
    <string name="create_report">Create Report</string>


</resources>
